After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722096 - tsdemux, mpegvideoparse: no output for airport_interview.ts (regression)
tsdemux, mpegvideoparse: no output for airport_interview.ts (regression)
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.2.2
Other Linux
: Normal major
: 1.2.5
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 729127 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-01-13 11:23 UTC by RajuB
Modified: 2014-04-29 06:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Regression was added by commit 21ebc7708d27fc42dcbcc4f802052c46c0229735. (885 bytes, patch)
2014-01-28 03:03 UTC, Amaury Medeiros
committed Details | Review

Description RajuB 2014-01-13 11:23:32 UTC
I upgraded my gstreamer framework from 1.0.8 to 1.2.2 version. While performing the sanity testing on the 1.2.2 version I found out that mpeg2 video decode path is broken. I found the same issue in 1.2.1 version also. 

Initially I thought that the issue I found is similar to this https://bugzilla.gnome.org/show_bug.cgi?id=721835 and applied the patch. But the patch didn't help. 

Here is the input test file: http://goo.gl/O4cG3U
Pipeline to reproduce the issue:

gst-launch-1.0 filesrc location=airport_interview.ts ! decodebin ! video/x-raw ! filesink location=out.yuv

The output YUV is of 0 size. While same pipeline works perfectly fine in gstreamer-1.0.8 version.

Please let me know if you require more information.
Comment 1 Tim-Philipp Müller 2014-01-13 14:42:34 UTC
Looks like either a tsdemux or mpegvideoparse bug, so moving to -bad.
Comment 2 RajuB 2014-01-14 04:44:17 UTC
Yes Tim, issue seems to be in mpegvideoparse. I re-ran and found out the same results.
Comment 3 Amaury Medeiros 2014-01-28 03:03:02 UTC
Created attachment 267377 [details] [review]
Regression was added by commit 21ebc7708d27fc42dcbcc4f802052c46c0229735.

Attaching a proposed fix.
Comment 4 Edward Hervey 2014-01-28 12:58:39 UTC
fixed, thanks

commit 44a87d210934c7ab2d899245de778238f318bf56
Author: Amaury Medeiros <amaurymedeiros@gmail.com>
Date:   Mon Jan 27 23:55:57 2014 -0300

    tsdemux: Fix flags comparison operator precedence
    
    Fix operator precedence, so the whole operation is
    negated instead of only flags variable.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722096
Comment 5 Sebastian Dröge (slomo) 2014-04-29 06:54:15 UTC
*** Bug 729127 has been marked as a duplicate of this bug. ***